# Coding-Interview-Prep

./: README.md
workspace/cpp_concurrency_in_action/: README.md
workspace/cpp_concurrency_in_action/01-introduction/: 01_hello_cpp_concurrency.cpp  CMakeLists.txt
workspace/cpp_concurrency_in_action/02-managing-threads/: 01_create_thread_lambda_function.cpp  02_create_thread_functor.cpp  03_thread_guard.cpp  04_pass_class_method.cpp  04_pass_reference_argument.cpp  05_movable_thread.cpp  06_move_aware_container_for_thread.cpp  07_determine_hardware_concurrency.cpp  08_parallel_accumulate.cpp  09_thread_identifier.cpp  CMakeLists.txt
workspace/data_structure_and_algorithms/: README.md
workspace/data_structure_and_algorithms/advanced/: README.md
workspace/data_structure_and_algorithms/advanced/01-double-pointer/: CMakeLists.txt  lc_0265_maximum_non_negative_subarray.cpp  lc_1844_subarray_sum_equals_to_k_ii.cpp
workspace/data_structure_and_algorithms/advanced/01-two-pointers/: CMakeLists.txt  README.md  lc_1507_shortest_subarray_with_sum_at_least_k.cpp  lc_1844_subarray_sum_equals_to_k_ii.cpp
workspace/data_structure_and_algorithms/advanced/06-union-find/: CMakeLists.txt  README.md  lc_0434_number_of_islands_ii.cpp  lc_0805_maximum_association_set.cpp  lc_1014_bricks_falling_when_hit.cpp  lc_1179_friend_circles.cpp  lc_1463_paper_review.cpp
workspace/data_structure_and_algorithms/advanced/07-trie/: CMakeLists.txt  README.md  lc_0442_implement_trie_prefix_tree.cpp  lc_0623_k_edit_distance.cpp  lc_0634_word_squares.cpp  lc_1624_max_distance.cpp
workspace/data_structure_and_algorithms/advanced/07-trie/include/: trie.hpp
workspace/data_structure_and_algorithms/basic/: README.md
workspace/data_structure_and_algorithms/basic/01-introduction/: CMakeLists.txt  lc_0013_find_substring.cpp  lc_0200_longest_palindromic_substring.cpp  lc_0415_is_palindrome.cpp  lc_0627_longest_palindrome_i.cpp  lc_0667_longest_palindromic_subsequence.cpp  lc_1790_rotate_string_ii.cpp
workspace/data_structure_and_algorithms/basic/02-two-pointers/: CMakeLists.txt  README.md  lc_0005_kth_largest_element.cpp  lc_0031_partition_array.cpp  lc_0057_3sum.cpp  lc_0143_sort_colors_ii.cpp  lc_0144_interleaving_positive_and_negative_numbers.cpp  lc_0148_sort_colors.cpp  lc_0148_sort_colors_no_counting.cpp  lc_0228_middle_of_linked_list.cpp  lc_0382_triangle_count.cpp  lc_0443_two_sum_greater_than_target.cpp  lc_0461_kth_smallest_numbers_in_unsorted_array.cpp  lc_0533_two_sum_closest_to_target.cpp  lc_0539_move_zeros.cpp  lc_0587_two_sum_unique_pairs.cpp  lc_0607_two_sum_iii_data_structure_design.cpp  lc_0608_two_sum_ii_input_array_is_sorted.cpp  lc_0609_two_sum_less_than_or_equal_to_target.cpp  lc_0976_4sum_ii.cpp
workspace/data_structure_and_algorithms/basic/03-binary-search/: CMakeLists.txt  README.md  lc_0014_first_position_of_target.cpp  lc_0062_search_in_rotated_sorted_array.cpp  lc_0075_find_peak_element.cpp  lc_0159_find_minimum_in_rotated_sorted_array.cpp  lc_0183_wood_cut.cpp  lc_0447_search_in_a_big_sorted_array.cpp  lc_0458_classical_binary_search.cpp  lc_0458_last_position_of_target.cpp  lc_0460_find_k_closest_elements.cpp  lc_0585_maximum_number_in_mountain_sequence.cpp
workspace/data_structure_and_algorithms/basic/04-bfs/: CMakeLists.txt  README.md  lc_0120_word_ladder.cpp  lc_0127_topological_sorting.cpp  lc_0137_clone_graph.cpp  lc_0433_number_of_islands__graph_search.cpp  lc_0611_knight_shortest_path.cpp
workspace/data_structure_and_algorithms/basic/05-divide-and-conquer/: CMakeLists.txt  README.md  lc_0011_search_range_in_binary_search_tree.cpp  lc_0085_insert_node_in_a_binary_search_tree.cpp  lc_0087_remove_node_in_binary_search_tree.cpp  lc_0088_lowest_common_ancestor_of_a_binary_tree.cpp  lc_0175_invert_binary_tree__bfs.cpp  lc_0175_invert_binary_tree__recursive.cpp  lc_0453_flatten_binary_tree_to_linked_list.cpp  lc_0596_minimum_subtree.cpp  lc_0597_subtree_with_maximum_average.cpp  lc_0900_closest_binary_search_tree_value.cpp  lc_0902_kth_smallest_element_in_a_bst.cpp
workspace/data_structure_and_algorithms/basic/06-dfs/: CMakeLists.txt  README.md  lc_0010_string_permutation_ii.cpp  lc_0015_permutations.cpp  lc_0017_subsets.cpp  lc_0018_subsets_ii.cpp  lc_0090_k_sum_ii.cpp  lc_0132_word_search_ii.cpp  lc_0135_combination_sum.cpp  lc_0425_letter_combinations_of_a_phone_number.cpp  lc_1848_word_search_iii.cpp
workspace/data_structure_and_algorithms/basic/07-common-data-structures/: CMakeLists.txt  README.md  lc_0004_ugly_number_ii.cpp  lc_0105_copy_list_with_random_pointer.cpp  lc_0124_longest_consecutive_sequence.cpp  lc_0134_lru_cache.cpp  lc_0138_subarray_sum.cpp  lc_0171_anagram.cpp  lc_0486_merge_k_sorted_arrays.cpp  lc_0544_top_k_largest_numbers.cpp  lc_0545_top_k_largest_numbers_ii.cpp  lc_0612_k_closest_points.cpp  lc_0657_insert_delete_getrandom_exact_o1.cpp  lc_0657_insert_delete_getrandom_o1.cpp  lc_0658_first_unique_number_in_data_stream.cpp  lc_0954_insert_delete_getrandom_o1_duplicates_allowed.cpp  lc_0960_first_unique_number_in_data_stream_ii.cpp
workspace/data_structure_and_algorithms/basic/09-dynamic-programming/: CMakeLists.txt  README.md  lc_0119_edit_distance.cpp  lc_0366_fibonacci.cpp
workspace/data_structure_and_algorithms/practice/: CMakeLists.txt  README.md  rq_0001_hello_world.cpp
workspace/data_structure_and_algorithms/practice/quant/: CMakeLists.txt  rq_0001_parse_the_trades.cpp  rq_0002_parse_the_trades_read_optimized  rq_0002_parse_the_trades_read_optimized.cpp  trades.txt
workspace/data_structure_and_algorithms/practice/quant/rq_0003_producer_consumer/: CMakeLists.txt  README.md  main.cpp
workspace/data_structure_and_algorithms/practice/quant/rq_0003_producer_consumer/include/data/: A.hpp  B.hpp  data.hpp
workspace/data_structure_and_algorithms/practice/quant/rq_0003_producer_consumer/include/queue/: lock_based_queue.hpp
workspace/data_structure_and_algorithms/practice/quant/rq_0003_producer_consumer/include/threads/: consumer_C.hpp  consumer_D.hpp  producer_A.hpp  producer_B.hpp
(+15 files in other folders)
